# rustix

./: .gitignore  .gitlab-ci.yml  Cargo.toml  Dockerfile  LICENSE.txt  Makefile  README.md  backstory.txt  config.toml  diesel.toml  docker-compose.yml  migration.Dockerfile  rustix.Dockerfile
.github/: FUNDING.yml
migrations/2017-10-07-223526_users/: up.sql
migrations/2017-10-07-223559_upvotables/: down.sql  up.sql
migrations/2017-10-07-223603_upvotes/: down.sql  up.sql
migrations/2017-10-07-223610_quotes/: down.sql  up.sql
migrations/2023-05-02-233729_factoids/: down.sql  up.sql
src/: bot.rs  client.rs  config.rs  errors.rs  lib.rs  main.rs  matrix_types.rs  services.rs  state.rs  utils.rs
src/filters/: channel_filter.rs  forward_filter.rs  message_type_filter.rs  mod.rs  self_filter.rs  user_filter.rs
src/services/: admin.rs  bf.rs  bonequest.rs  choose.rs  crypto_coin.rs  csv_quote.rs  duel.rs  echo.rs  get_joined.rs  help.rs  join.rs  leave.rs  logging.rs  membership.rs  mod.rs  prefix.rs  roll.rs  roulette.rs  schema.rs  self_filter.rs  structure.rs  timecube.rs  tryfile.rs  upvote.rs  utils.rs  votekick.rs  voteremove.rs  websearch.rs
src/services/csv_quote/: csv_quote.rs  mod.rs
src/services/db/: mod.rs  schema.rs  user.rs
src/services/factoid/: backend.rs  del_factoid.rs  factoid.rs  list_all_factoid.rs  mod.rs  models.rs  service.rs
src/services/karma/: backend.rs  mod.rs  models.rs  rank_karma.rs  show_karma.rs  tracking.rs
src/services/nodectrl/: configure.rs  mod.rs
src/services/old_quote/: mod.rs  read_quote.rs
src/services/openai/: gpt.rs  mod.rs  types.rs
src/services/quote/: add_quote.rs  backend.rs  del_quote.rs  (+5 more)
(+4 files in other folders)
