[package]
name = "rustix"
version = "0.2.0"
authors = ["James Jenkins <applesmacs@yahoo.com>"]
edition = "2018"

[dependencies]
reqwest = { version = "0.11", features = ["json", "blocking"] }
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
maplit = "1.0"
regex = "1.5"
chrono = "0.4"
toml = "0.7"
http = "0.2"
csv = "1.1"
url = "2.2"
rust_tokenizers = "8.0"
sha3 = "0.10.6"
base16ct = { version = "0.1.1", features = ["alloc"] }
signal-hook = "0.3.17"

diesel = { version = "1.4.4", features = ["postgres"] }
diesel-derive-enum = { version = "1.1.2", features = ["postgres"] }
dotenv = "0.15.0"

rand = { version = "0.8", features = ["small_rng"] }